<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptFragment"
    android:id="@+id/receipt_frag"
    android:padding="5dp">

    <TableRow>
        <TextView
            android:text="@string/receipt"
            android:textSize="15sp"
            android:width="80dp"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/ref_no"
            android:textSize="15sp"
            android:width="100dp"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/ammount"
            android:textSize="15sp"
            android:width="80dp"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/date"
            android:textSize="15sp"
            android:width="100dp"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/d_c"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </TableRow>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/receipt_recycler"
        >

    </androidx.recyclerview.widget.RecyclerView>

</TableLayout>