<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:id="@+id/quoteriskheader"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/gray"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/risk_id"
            android:textSize="15sp"
            android:width="60dp"
            android:textStyle="bold"
            android:textColor="@color/ghostWhite"            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:width="90dp"
            android:textStyle="bold"
            android:textColor="@color/ghostWhite"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum_insured"
            android:textSize="15sp"
            android:width="100dp"
            android:textStyle="bold"
            android:textColor="@color/ghostWhite"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textSize="15sp"
            android:width="100dp"
            android:textStyle="bold"
            android:textColor="@color/ghostWhite"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/quote_risk_recycler"
        android:layout_below="@+id/quoteriskheader"
        >

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>