<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gridheader"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="10dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/aliceBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/product"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="115dp"
            android:textColor="@color/teal"            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="160dp"
            android:text="@string/quote_no"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/teal"            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/teal"
            />
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quotesrecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="195dp"
        android:layout_below="@+id/gridheader">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>