<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuoteDetails">

    <androidx.cardview.widget.CardView
        android:id="@+id/quoteDetailsCard"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:layout_gravity="fill"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:id="@+id/quoteproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/product"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/quoteprodvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="Quote No"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/quoteNoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/status"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/statusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/from"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/fromValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/to"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/quoteToValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/expiry"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/quoteExpiryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-15dp"
        >
        <TextView
            android:id="@+id/quoteAmmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:width="80dp"
            android:fontFamily="@font/adamina"
            android:text="@string/ammount"
            android:textColor="@color/ghostWhite"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/quoteAmmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:layout_gravity="fill"
            android:text=""
            android:textColor="@color/ghostWhite"
            android:fontFamily="@font/adamina"
            android:textSize="15sp"
            />
    </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:layout_below="@+id/quoteDetailsCard"
        tools:layout_editor_absoluteX="246dp">
        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorAccent"
            android:id="@+id/quote_tabs_layout"
            >

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/quoteviewpager_id">
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>

</RelativeLayout>